tests/test67.rael.exp
Error [3:9]: Unrecognized token
|     log rael
|         ^
